# secbrn

./: .env.example  README.md  docker-compose.yml  olama.backup  pyproject.toml
docs/: ARCHITECTURE.md  EVAL.md  FEATURES.md  PIPELINE.md  ROADMAP.md  SCHEMA.md
eval/: answers.example.json  gold.json
eval/corpus/: bm25.md  chunking.md  embeddings.md  entity-resolution.md  evaluation.md  graphrag.md  hnsw.md  hybrid-search.md  knowledge-graph.md  neo4j.md  ollama.md  pgvector.md  rag.md  reranking.md  vector-search.md
my-notes/: crime and punishment.txt
scripts/: backfill_spans.py
secbrn/: __init__.py  cli.py  config.py  healthcheck.py  models.py  pipeline.py
secbrn/answer/: __init__.py  synth.py
secbrn/eval/: __init__.py  answers.py  dataset.py  harness.py  metrics.py
secbrn/extract/: __init__.py  extractor.py  schema.py
secbrn/graph/: __init__.py  base.py  ddl.py  memory.py  neo4j_store.py
secbrn/ingest/: __init__.py  chunk.py  loaders.py  normalize.py
secbrn/providers/: __init__.py  base.py  fake.py  ollama.py
secbrn/resolve/: __init__.py  resolver.py
secbrn/retrieve/: __init__.py  expand.py  rerank.py  retriever.py
secbrn/util/: __init__.py  concurrency.py
tests/: conftest.py  test_answers_eval.py  test_chunk.py  test_concurrency.py  test_eval.py  test_loaders.py  test_metrics_graph.py  test_normalize.py  test_pipeline_e2e.py  test_progress.py  test_rerank_expand.py  test_reset.py  test_resilience.py  test_resolve.py  test_retrieve.py  test_schema_extract.py
tests/fixtures/: article.html  embeddings.md  gold_offline.json  graphrag.md  (+4 more)
