[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secbrn"
version = "0.1.0"
description = "Local graph second brain for LLMs — Neo4j knowledge graph + vector index, queried with a local LLM."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SecBrn" }]
dependencies = [
    "neo4j>=5.20",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13.7",
    "pymupdf>=1.24",        # PDF text + page spans
    "beautifulsoup4>=4.12", # web readability fallback
    "markdown-it-py>=3.0",  # markdown structure
]

[project.optional-dependencies]
# Heavier, optional framework integrations (kept pluggable per ARCHITECTURE ADR-2).
graphrag = ["neo4j-graphrag>=1.0"]
llamaindex = ["llama-index-core>=0.11", "llama-index-graph-stores-neo4j>=0.3"]
st = ["sentence-transformers>=3.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
secbrn = "secbrn.cli:app"

[tool.setuptools.packages.find]
include = ["secbrn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
